gramatica.txt
Gramática de GCL

Programa:
- Bloque:
    <block> -> |[ <declarations> <instructions> ]|

    - Declaraciones:
        <declarations> -> declare <sec_declarations>
                        | λ

        <sec_declarations>  -> <declaration>; <sec_declarations> 
                            | <declaration>

        <declaration> -> <idLists> : <type>

        <idLists>   -> <id>, <idLists> 
                    | <id>

- Instrucciones
<instructions> -> <instruction>; <instructions> 
                | <instruction>

<instruction>  -> skip
                | <assignment>
                | <print_instruction>
                | <conditional>
                | <forLoop>
                | <doLoop>

    - Asignación:
    <assignment> -> <id> := <expression>

    <expression>    -> (<expression>)
                    | <expression> + <expression>
                    | <expression> - <expression>
                    | <expression> * <expression>
                    | -<expression>
                    | <expression> \/ <expression>
                    | <expression> /\ <expression>
                    | !<expression>
                    | <expression> < <expression>
                    | <expression> <= <expression>
                    | <expression> >= <expression>
                    | <expression> > <expression>
                    | <expression> == <expression>
                    | <expression> != <expression>
                    | <int_array>
                    | <int_array_access>
                    | <number>
                    | <boolean>
                    | <id>

    <int_array_access> -> id[<expression>]

    <int_array> -> <intList> 

    <int_array_elements> -> <number>, <int_array_elements>
                        | <number>

    - Salida
    <print_instruction> -> print <concatenation>

    <concatenation> -> <string_expression> . <concatenation>
                    | <string_expression> 

    <string_expression>  -> <expresion> | <string>

    - Condicionales y guardias
    <conditional>   -> if <expression> --> <execute> 
                        <guards>
                       fi
    
    <guards> -> <guard> | <guard> <guards>
    <guard> -> [] <expression> --> <execute>
            | λ

    <execute>   -> <instructions>
                | <block>

    - Iteración for
    <forLoop> -> for <id> in <expression> to <expression> --> <execute> rof

    - Iteración do
    <doLoop> -> do <expression> --> <execute> od

    
Terminales:
    <type>  -> int 
            | bool
            | array[<number> .. <number>]

    <id> -> [a-zA-Z_][a-zA-Z_]*
    <number>    -> [0-9]+
    <boolean>   -> true
                | false

    <string>    -> "([^\n\]|\"|\\|\n)*"
